--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyChatApp">
-        <activity android:name=".OtpAuth"></activity>
+        <activity android:name=".OtpAuth"
+            android:windowSoftInputMode="adjustResize" />
         <activity android:name=".CreateProfile" />
         <activity
             android:name=".PhoneVerification"
