--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.mychatapp">
+
+    <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
@@ -8,28 +10,25 @@
         android:allowBackup="true"
         android:icon="@mipmap/chat_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/chat_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyChatApp">
-        <activity android:name=".OtpAuth"
-            android:windowSoftInputMode="adjustResize" />
-        <activity android:name=".CreateProfile" />
-        <!--   Image Crop Activity    -->
-        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
-            android:theme="@style/Base.Theme.AppCompat"/> <!-- optional (needed if default theme has no action bar) -->
-
-        <activity
-            android:name=".PhoneVerification"
-            android:windowSoftInputMode="adjustResize" >
+        <activity android:name=".SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".SplashScreen">
-
-        </activity>
+        <activity
+            android:name=".PhoneVerification"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".OtpAuth"
+            android:windowSoftInputMode="adjustResize" />
+        <activity android:name=".CreateProfile" />
+        <!--   Image Crop Activity    -->
+        <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
+            android:theme="@style/Base.Theme.AppCompat"/> <!-- optional (needed if default theme has no action bar) -->
         <activity android:name=".MainActivity" />
 
         <meta-data
